--- a/src/index.html
+++ b/src/index.html
@@ -340,7 +340,7 @@
 										</li>
 										<li class="services__item">
 											<span class="services__name">NADOGRADNJA KOSE 1-PRAMEN</span>
-											<span class="services__price">4.5e</span>
+											<span class="services__price">8e</span>
 										</li>
 										<li class="services__item">
 											<span class="services__name">TRETMAN</span>
@@ -394,19 +394,23 @@
 									<ul class="services__content">
 										<li class="services__item">
 											<span class="services__name">FARBANJE KRATKA KOSA</span>
-											<span class="services__price">2500 rsd</span>
-										</li>
-										<li class="services__item">
-											<span class="services__name">FARBANJE SREDNJA KOSA</span>
-											<span class="services__price">3000 rsd</span>
-										</li>
-										<li class="services__item">
-											<span class="services__name">FARBANJE DUGA KOSA</span>
 											<span class="services__price">3500 rsd</span>
 										</li>
 										<li class="services__item">
+											<span class="services__name">FARBANJE SREDNJA KOSA</span>
+											<span class="services__price">4500 rsd</span>
+										</li>
+										<li class="services__item">
+											<span class="services__name">FARBANJE DUGA KOSA</span>
+											<span class="services__price">5500 rsd</span>
+										</li>
+										<li class="services__item">
 											<span class="services__name">FARBANJE EKSTRA DUGA KOSA</span>
-											<span class="services__price">4000 rsd</span>
+											<span class="services__price">7000 rsd</span>
+										</li>
+										<li class="services__item">
+											<span class="services__name">FARBANJE IZRASTAK</span>
+											<span class="services__price">2500 rsd</span>
 										</li>
 										<li class="services__item">
 											<span class="services__name">FARBANJE MUŠTERIJINOM FARBOM</span>
@@ -502,7 +506,7 @@
 										</li>
 										<li class="services__item">
 											<span class="services__name">DODATAK NA GRAMAŽU <br>DEKOLORANTA 1g</span>
-											<span class="services__price">150 rsd</span>
+											<span class="services__price">500 rsd</span>
 										</li>
 									</ul>
 								</div>
@@ -572,7 +576,7 @@
 										</li>
 										<li class="services__item">
 											<span class="services__name">NADOGRADNJA KOSE 1-PRAMEN</span>
-											<span class="services__price">4.5e</span>
+											<span class="services__price">8e</span>
 										</li>
 										<li class="services__item">
 											<span class="services__name">TRETMAN</span>
@@ -624,19 +628,23 @@
 									<ul class="services__content">
 										<li class="services__item">
 											<span class="services__name">FARBANJE KRATKA KOSA</span>
-											<span class="services__price">2500 rsd</span>
-										</li>
-										<li class="services__item">
-											<span class="services__name">FARBANJE SREDNJA KOSA</span>
-											<span class="services__price">3000 rsd</span>
-										</li>
-										<li class="services__item">
-											<span class="services__name">FARBANJE DUGA KOSA</span>
 											<span class="services__price">3500 rsd</span>
 										</li>
 										<li class="services__item">
+											<span class="services__name">FARBANJE SREDNJA KOSA</span>
+											<span class="services__price">4500 rsd</span>
+										</li>
+										<li class="services__item">
+											<span class="services__name">FARBANJE DUGA KOSA</span>
+											<span class="services__price">5500 rsd</span>
+										</li>
+										<li class="services__item">
 											<span class="services__name">FARBANJE EKSTRA DUGA KOSA</span>
-											<span class="services__price">4000 rsd</span>
+											<span class="services__price">7000 rsd</span>
+										</li>
+										<li class="services__item">
+											<span class="services__name">FARBANJE IZRASTAK</span>
+											<span class="services__price">2500 rsd</span>
 										</li>
 										<li class="services__item">
 											<span class="services__name">FARBANJE MUŠTERIJINOM FARBOM</span>
@@ -726,7 +734,7 @@
 										</li>
 										<li class="services__item">
 											<span class="services__name">DODATAK NA GRAMAŽU <br>DEKOLORANTA 1g</span>
-											<span class="services__price">150 rsd</span>
+											<span class="services__price">500 rsd</span>
 										</li>
 									</ul>
 									<h3 class="services__subtitle">KERATINSKO KOVRDŽANJE</h3>
@@ -781,13 +789,19 @@
 									<img class="popular__img" src="assets/images/popular/3.png" alt="Frizura">
 								</div>
 								<div class="popular__slider-primary-slide swiper-slide">
-									<img class="popular__img" src="assets/images/popular/1.png" alt="Frizura">
+									<img class="popular__img" src="assets/images/popular/4.png" alt="Frizura">
 								</div>
 								<div class="popular__slider-primary-slide swiper-slide">
-									<img class="popular__img" src="assets/images/popular/2.png" alt="Frizura">
+									<img class="popular__img" src="assets/images/popular/5.png" alt="Frizura">
 								</div>
 								<div class="popular__slider-primary-slide swiper-slide">
-									<img class="popular__img" src="assets/images/popular/3.png" alt="Frizura">
+									<img class="popular__img" src="assets/images/popular/6.png" alt="Frizura">
+								</div>
+								<div class="popular__slider-primary-slide swiper-slide">
+									<img class="popular__img" src="assets/images/popular/7.png" alt="Frizura">
+								</div>
+								<div class="popular__slider-primary-slide swiper-slide">
+									<img class="popular__img" src="assets/images/popular/8.png" alt="Frizura">
 								</div>
 							</div>
 						</div>
@@ -800,6 +814,12 @@
 					</div>
 					<div class="popular__slider-second swiper js-popular-second-slider">
 						<div class="popular__slider-second-wrapper swiper-wrapper">
+							<div class="popular__slider-second-slide swiper-slide">
+								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
+							</div>
+							<div class="popular__slider-second-slide swiper-slide">
+								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
+							</div>
 							<div class="popular__slider-second-slide swiper-slide">
 								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
 							</div>
@@ -887,67 +907,6 @@
 											</a>
 										</li>
 									</ul>
-								</div>
-							</div>
-							<div class="info__slide swiper-slide">
-								<div class="info__img-container">
-									<img class="info__img info__img--left" src="assets/images/info/Andjela-Pajic.png" alt="Andjela Pajic">
-								</div>
-								<div class="info__box">
-									<h3 class="info__name">Anđela Pajić</h3>
-									<h4 class="info__position">Svilene trepavice</h4>
-									<button class="info__bio-open js-bio-open" aria-label="Open bio">
-										<i class="icon ico-bio"></i>
-									</button>
-									<div class="info__desc">
-										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
-											<i class="icon ico-close"></i>
-										</button>
-										<div class="info__bio">
-											<p>
-												Moje ime je Andjela Pajić i bavim se profesionalnom nadogradnjom svilenih trepavica. Kao strastveni ljubitelj lepote, svoje znanje i veštine stekla sam na prestižnoj akademiji 'Purity' 2021. godine.
-												<br><br>
-												Od tada pa sve do danas, usavršavala sam svoje veštine radeći u salonima na teritoriji Vršca, što mi je omogućilo prepoznatljivost na tržištu i kasnije samostalan rad. Nakon nekoliko godina iskustva u ovom poslu, uspela sam razviti sopstveni stil i pristup radu, koji se fokusira na kvalitet i pažnju prema svakom klijentu.
-												<br><br>
-												Kao vrlo talentovana i predana svom poslu, posvećena sam tome da prema svakom klijentu pristupim individualno i pažljivo prilagodim svoj rad njihovim potrebama.
-												<br>
-												Moj cilj je da svaki klijent izgleda i oseća se najbolje moguće nakon tretmana!
-												<br><br>
-												Vrlo sam posvećena svakom klijentu sa svrhom, kako da nadmašim njihova očekivanja tako i da se osećaju ugodno i prijatno.
-											</p>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<div class="info__slide swiper-slide">
-								<div class="info__img-container">
-									<img class="info__img info__img--left" src="assets/images/info/Milica-Stanin.png" alt="Milica Stanin">
-								</div>
-								<div class="info__box">
-									<h3 class="info__name">Milica Stanin</h3>
-									<h4 class="info__position">Osnivač & Šminker</h4>
-									<button class="info__bio-open js-bio-open" aria-label="Open bio">
-										<i class="icon ico-bio"></i>
-									</button>
-									<div class="info__desc">
-										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
-											<i class="icon ico-close"></i>
-										</button>
-										<div class="info__bio">
-											<p>
-												Frizerskom ateljeu ‘KOTRLJA’ pridružuje se ‘SPLENDIDA BELLEZZA’ , šminkerski deo, za koji je zadužena Milica Stanin.
-												<br><br>
-												Moje ime je Milica Stanin, samouki sam šminker sa istaknutim talentom još od samog početka svoje karijere.
-												<br><br>
-												Sa svojih 16 godina sam se počela baviti šminkanjem u mom rodnom gradu Vršcu i svojim prirodnim talentom stekla značajno iskustvo radeći sa različitim tipovima kože i prilagođavajući se individualnim potrebama svakog klijenta.
-												<br><br>
-												Svoje veštine i tehnike sam unapredila radeći sa slavnom šminkerkom Kristinom Uhelji, koja mi je pomogla da svoje sposobnosti podignem na viši nivo. Uvek sam u toku sa najnovijim trendovima i tehnikama i naročito volim da isprobavam nove stvari.
-												<br><br>
-												Posebno bih naglasila da mi je drago što mi ova vrsta zanimanja omogućava da budem kreativna i dozvoljava da eksperimentišem novim tehnikama kako bih svakom klijentu pružila najbolji mogući izgled.
-											</p>
-										</div>
-									</div>
 								</div>
 							</div>
 							<div class="info__slide swiper-slide">
