content update - removed placeholders for popular

--- a/src/index.html
+++ b/src/index.html
@@ -780,13 +780,19 @@
 						<div class="popular__slider-primary swiper js-popular-primary-slider">
 							<div class="popular__slider-primary-wrapper swiper-wrapper">
 								<div class="popular__slider-primary-slide swiper-slide">
-									<img class="popular__img" src="assets/images/popular/1.png" alt="Frizura">
+									<img class="popular__img" src="assets/images/popular/4.png" alt="Frizura">
 								</div>
 								<div class="popular__slider-primary-slide swiper-slide">
-									<img class="popular__img" src="assets/images/popular/2.png" alt="Frizura">
+									<img class="popular__img" src="assets/images/popular/5.png" alt="Frizura">
 								</div>
 								<div class="popular__slider-primary-slide swiper-slide">
-									<img class="popular__img" src="assets/images/popular/3.png" alt="Frizura">
+									<img class="popular__img" src="assets/images/popular/6.png" alt="Frizura">
+								</div>
+								<div class="popular__slider-primary-slide swiper-slide">
+									<img class="popular__img" src="assets/images/popular/7.png" alt="Frizura">
+								</div>
+								<div class="popular__slider-primary-slide swiper-slide">
+									<img class="popular__img" src="assets/images/popular/8.png" alt="Frizura">
 								</div>
 								<div class="popular__slider-primary-slide swiper-slide">
 									<img class="popular__img" src="assets/images/popular/4.png" alt="Frizura">
@@ -814,6 +820,12 @@
 					</div>
 					<div class="popular__slider-second swiper js-popular-second-slider">
 						<div class="popular__slider-second-wrapper swiper-wrapper">
+							<div class="popular__slider-second-slide swiper-slide">
+								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
+							</div>
+							<div class="popular__slider-second-slide swiper-slide">
+								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
+							</div>
 							<div class="popular__slider-second-slide swiper-slide">
 								<p class="popular__desc">Nova frizura je savršen način da unesete svežinu u vaš izgled. Bilo da tražite nešto elegantno i sofisticirano, ili nešto opušteno i ležerno, neka vam kao motivacija posluže jedne od naših najpopularnijih frizura koje će vam pomoći da izrazite svoju jedinstvenost i stil na pravi način. </p>
 							</div>
